(fix) [SD-4257] "create" button gets out of place when long highlight page is selected and editor is opened

--- a/styles/less/sf-additional.less
+++ b/styles/less/sf-additional.less
@@ -182,6 +182,7 @@
 }
 
 .flat-searchbar {
+  flex-grow: 0;
     &.monitoring-flat-searchbar {
         .search-handler {
 
@@ -204,6 +205,7 @@
             border: 0 !important;
             width: 0;
             padding: 0;
+            background-color: rgba(255,255,255,0);
             .transition(all 0.3s ease);
             &:focus {
                 .box-shadow(none) !important;
@@ -215,11 +217,13 @@
             width: 28px;
             height: 28px;
             display: inline-block;
-            background: url(../../images/search-icon.png) no-repeat 5px 5px;
-            .opacity(85);
+            .opacity(50);
             &:hover {
                 cursor: pointer;
-                .opacity(100);
+                .opacity(80);
+            }
+            i {
+              padding: 7px 3px 4px 6px;
             }
         }
     }
@@ -241,9 +245,10 @@
     }
 
     &.extended {
+      flex-grow: 1;
         .search-handler {
             input {
-                width: 320px;
+                width: auto;
                 padding: 0 6px;
             }
             background: #fff;
@@ -256,6 +261,11 @@
             display: inline-block;
         }
     }
+}
+
+.ui-responsive-small .flat-searchbar.extended {
+  position: absolute;
+  z-index: 2;
 }
 
 .monitoring-backlink{
